--- a/src/App.css
+++ b/src/App.css
@@ -787,6 +787,7 @@ body{
   border-radius: 30px;
   background-color: transparent;
   color:white;
+  width: 150px;
 }
 
 .page10 .content{
@@ -1227,6 +1228,7 @@ body{
   border: none;
   font-weight: 500;
   font-size: 16px;
+  width: 150px;
 }
 
 .page15 .right{
@@ -1477,11 +1479,423 @@ body{
 }
 
 /* page18 */
-/* .page18{
+.page18{
   height: 850px;
-  background-image: url(./images/Teeth.png);
+  background-image: url(./images/TeethBg.png);
   margin-bottom: 50px;
-} */
+  background-size: cover;
+}
+
+.page18 .overlay{
+  height: 850px;
+  background-color: #492fbd70;
+  padding: 60px 110px 60px 210px;
+}
+
+.page18 .header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.page18 .icon{
+  color:white;
+  font-size: 23px;
+  font-weight: 600;
+}
+
+.page18 .right{
+  display: flex;
+  align-items: center;
+}
+
+.page18 .right>*{
+  margin: 0px 20px;
+  color: white;
+}
+
+.page18 .header button{
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color:white;
+  color:#1E0E62;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.page18 .content{
+  width: 626px;
+  font-size: 72px;
+  font-weight: 700;
+  color: white;
+  margin: 80px 0 50px;
+}
+
+.page18 p{
+  width: 572px;
+  font-size: 22px;
+  font-weight: 500;
+  color: white;
+}
+
+.page18 button{
+  width: 153px;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 25px;
+  margin-top: 50px;
+  font-size: 17px;
+  font-weight: 500px;
+  margin-right: 30px;
+}
+
+.page18 .b1{
+  background-color: white;
+  border: none;
+  color:#1E0E62;
+}
+
+.page18 .b2{
+  background-color: transparent;
+  color: white;
+  border: 2px solid white;
+}
+
+/* page19 */
+.page19{
+  margin-bottom: 50px;
+  height: 900px;
+  background-color: white;
+  padding: 95px 210px;
+  position: relative;
+}
+
+.page19 .icon{
+  color:#1E0E62;
+  font-size: 23px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.page19 .header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page19 .header>*{
+  margin: 0 20px 100px;
+  color: rgb(175, 174, 174);
+  font-weight: 500;
+}
+
+.page19 .content{
+  width: 469px;
+  font-size: 58px;
+  font-weight: 700;
+  color:#1E0E62;
+}
+
+.page19 p{
+  width: 458px;
+  font-weight: 500;
+  font-size: 22px;
+  color:#15143966;
+  margin: 50px 0 80px;
+}
+
+.page19 button{
+  padding: 15px 30px;
+  background-color:#1E0E62;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.page19 .I1{
+  position: absolute;
+  top: 408px;
+  left: 126px;
+}
+
+.page19 .I2{
+  position: absolute;
+  top: 250px;
+  left: 767px;
+}
+
+/* page20 */
+
+.page20{
+  margin-bottom: 50px;
+  height: 1070px;
+  background-color: #2F1893;
+  padding: 70px 210px;
+  position: relative;
+}
+
+.page20 .burger{
+  float: right;
+}
+
+.page20 .icon{
+  color:white;
+  font-size: 23px;
+  font-weight: 600;
+  margin:120px 0px 30px 500px;
+}
+
+.page20 .content{
+  width: 505px;
+  font-weight: 700;
+  font-size: 72px;
+  color: white;
+  margin: 50px 0 30px 500px
+}
+
+.page20 p{
+  color: white;
+  width: 400px;
+  font-weight: 500;
+  font-size: 22px;
+  margin: 50px 0px 30px 500px;
+}
+
+.page20 button{
+    width: 153px;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 25px;
+    font-size: 17px;
+    font-weight: 500px;
+    border: none;
+    background-color: #25DAC5;
+    margin: 50px 0px 30px 500px;
+}
+
+.page20 .I1{
+  position: absolute;
+  top: 154px;
+  left: 315px
+}
+
+/* page21 */
+.page21{
+  margin-bottom: 50px;
+  height: 810px;
+  background-image: url(./images/water.png);
+}
+
+.page21 .overlay{
+  background-color: #3218a594;
+  padding: 50px 210px;
+  height: 810px;
+}
+
+.page21 .header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color:#25DAC5;
+}
+
+.page21 .center{
+  display: flex;
+  align-items: center;
+}
+
+.page21 .center>*{
+  margin: 0 20px;
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+}
+
+.page21 .icon{
+  color:white;
+  font-size: 23px;
+  font-weight: 600;
+}
+
+.page21 .header button{
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color:#482BE7;
+  color: white;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.page21 .header .right{
+  display: flex;
+  align-items: center;
+}
+
+.page21 .header .right>*{
+  margin:0 10px;
+} 
+
+.page21 .header .right>div{
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.page21 .header .b1{
+  background-color: transparent;
+  border: 2px solid white;
+}
+
+.page21 .content{
+  width: 608px;
+  font-size: 58px;
+  font-weight: 700;
+  text-align: center;
+  margin: 100px auto 50px;
+  color: white;
+}
+
+.page21 .I1{
+  margin: 70px auto 70px;
+  display: block;
+}
+
+.page21 .final{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page21 .final>*{
+  width: 350px;
+  margin: 0px 30px;
+  color: white;
+}
+
+.page21 .final .fhead{
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+/* page22 */
+
+.page22{
+  height: 790px;
+  background-image: url(./images/Background.png);
+}
+
+.page22 .overlay{
+  height: 790px;
+  background-color: #4022c55b;
+  padding: 50px 210px;
+}
+
+.page22 .header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color:#1E0E62;
+}
+
+.page22 .icon{
+  color:white;
+  font-size: 23px;
+  font-weight: 600;
+}
+
+.page22 .header .right{
+  display: flex;
+  align-items: center;
+}
+
+.page22 .header .right>*{
+  margin: 0px 20px;
+  color: white;
+}
+
+.page22 .header .left{
+  display: flex;
+  align-items: center;
+}
+
+.page22 .header .left>*{
+  margin: 0px 20px;
+  color:white;
+}
+
+.page22 .header button{
+  padding: 10px 20px;
+  border: 2px solid rgb(177, 176, 176);
+  border-radius: 30px;
+  background-color: transparent;
+  color:white;
+}
+
+.page22 .content{
+  width: 600px;
+  font-size: 58px;
+  font-weight: 700;
+  margin: 100px auto 50px;
+  color: white;
+}
+
+.page22 p{
+  width: 718px;
+  font-weight: 500;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  margin: 50px auto;
+}
+
+.page22 .form{
+  width: 800px;
+  margin: 10px auto;
+}
+
+.page22 .form>input{
+  width: 300px;
+  height: 60px;
+  background-color: transparent;
+  border: 2px solid grey;
+  border-radius: 30px;
+  padding: 20px;
+  margin: 0px 10px;
+}
+
+.page22 #formButton{
+  padding: 15px 30px;
+  background-color:#E93A7D;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 50px auto 30px;
+}
+
+.page22 .end{
+  font-size: 18px;
+  font-weight: 500;
+  color: white;
+  text-align: center;
+  margin: 30px 0 10px;
+}
+
+.page22 .social{
+  display: flex;
+  justify-content: center;
+}
+
+.page22 .social>img{
+  margin: 20px 20px;
+}
+
 
 
 
